# VoxSurf

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp  model.stl  path.h.in  pyvoxel.cpp  setup.py  voxelizer.cpp  voxelizer.hpp
lib/LibSL-small/: CMakeLists.txt  LICENSE  README.md
lib/LibSL-small/src/LibSL/: LibSL.h
lib/LibSL-small/src/LibSL/CppHelpers/: BasicParser.h  CppHelpers.cpp  CppHelpers.h
lib/LibSL-small/src/LibSL/Image/: Filter.h  Image.cpp  Image.h  ImageFormat_JPG.cpp  ImageFormat_JPG.h  ImageFormat_PNG.cpp  ImageFormat_PNG.h  ImageFormat_TGA.cpp  ImageFormat_TGA.h  ImagePyramid.h  tga.cpp  tga.h
lib/LibSL-small/src/LibSL/Math/: Matrix4x4.h  Quaternion.h
lib/LibSL-small/src/LibSL/Memory/: Array.h  Array2D.h  Array3D.h  ArrayTools.h  Pointer.h
lib/LibSL-small/src/LibSL/Mesh/: Mesh.cpp  Mesh.h  MeshFormat_stl.cpp  MeshFormat_stl.h  VertexFormat.h  VertexFormat_base.h  VertexFormat_descriptor.h  VertexFormat_dynamic.cpp  VertexFormat_dynamic.h  VertexFormat_reference.h
lib/LibSL-small/src/LibSL/StlHelpers/: StlHelpers.cpp  StlHelpers.h
lib/LibSL-small/src/LibSL/SvgHelpers/: SvgHelpers.cpp  SvgHelpers.h
lib/LibSL-small/src/LibSL/System/: System.cpp  System.h
lib/LibSL-small/src/loki/: README  TypelistMacros.h
lib/xtensor-blas/: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  azure-pipelines.yml  rename_headers.py  xtensor-blasConfig.cmake.in
lib/xtensor-blas/benchmark/: CMakeLists.txt  benchmark_blas.hpp  main.cpp
lib/xtensor-blas/docs/: Doxyfile  environment.yml
lib/xtensor-blas/docs/source/: conf.py  index.rst  installation.rst  performance.rst  reference.rst  releasing.rst  usage.rst
lib/xtensor-blas/include/xflens/cxxblas/: CMakeLists.txt  LICENSE  README.md  cxxblas.cxx  cxxblas.doc  cxxblas.h  cxxblas.tcc  typedefs.h
lib/xtensor-blas/include/xflens/cxxblas/auxiliary/: auxiliary.h  auxiliary.tcc  complex.h  complex.tcc  complextrait.h  debugmacro.h  fakeuse.h  iscomplex.h  ismpfrreal.h  issame.h  pow.h  pow.tcc  restrictto.h
lib/xtensor-blas/include/xflens/cxxblas/drivers/: atlas.h  cblas.h  drivers.h  drivers.tcc  gotoblas.h  mklblas.h  openblas.h  refblas.h  sparseblas.h  veclib.h
lib/xtensor-blas/include/xflens/cxxblas/level1/: asum.doc  asum.h  asum.tcc  axpy.doc  axpy.h  axpy.tcc  copy.doc  copy.h  copy.tcc  dot.h  dot.tcc  iamax.h  iamax.tcc  level1.h  level1.tcc  nrm2.h  nrm2.tcc  rot.h  rot.tcc  rotm.h  rotm.tcc  scal.h  scal.tcc  swap.h  swap.tcc
lib/xtensor-blas/include/xflens/cxxblas/level1extensions/: acxpby.h  acxpby.tcc  acxpy.h  acxpy.tcc  asum1.h  asum1.tcc  axpby.h  axpby.tcc  axpy.h  axpy.tcc  ccopy.h  ccopy.tcc  dot.h  dot.tcc  gbaxpby.h  gbaxpby.tcc  gbaxpy.h  gbaxpy.tcc  gbcopy.h  gbcopy.tcc  gbcotr.h  gbcotr.tcc  gbscal.h  gbscal.tcc  geaxpby.h  geaxpby.tcc  geaxpy.h  geaxpy.tcc  gecopy.h  gecopy.tcc  gecotr.h  gecotr.tcc  geraxpy.h  geraxpy.tcc  gerscal.h  gerscal.tcc  gescal.h  gescal.tcc  geswap.h  geswap.tcc  (+30 more)
lib/xtensor-blas/include/xflens/cxxblas/level2/: gbmv.h  gbmv.tcc  gemv.h  gemv.tcc  ger.h  ger.tcc  hbmv.h  hbmv.tcc  hemv.h  hemv.tcc  her.h  her.tcc  her2.h  her2.tcc  hpmv.h  hpmv.tcc  hpr.h  hpr.tcc  hpr2.h  hpr2.tcc  level2.h  level2.tcc  sbmv.h  sbmv.tcc  spmv.h  spmv.tcc  spr.h  spr.tcc  spr2.h  spr2.tcc  symv.h  symv.tcc  syr.h  syr.tcc  syr2.h  syr2.tcc  tbmv.h  tbmv.tcc  tbsv.h  tbsv.tcc  (+8 more)
lib/xtensor-blas/include/xflens/cxxblas/level2extensions/: gbmv.h  gbmv.tcc  gemv.h  gemv.tcc  hemv.h  hemv.tcc  her.h  her.tcc  her2.h  her2.tcc  level2extensions.h  level2extensions.tcc  symv.h  symv.tcc  trmv.h  trmv.tcc  trsv.h  trsv.tcc
lib/xtensor-blas/include/xflens/cxxblas/level3/: gemm.h  gemm.tcc  hemm.h  hemm.tcc  her2k.h  her2k.tcc  herk.h  herk.tcc  level3.h  level3.tcc  symm.h  symm.tcc  syr2k.h  syr2k.tcc  syrk.h  syrk.tcc  trmm.h  trmm.tcc  trsm.h  trsm.tcc
lib/xtensor-blas/include/xflens/cxxblas/level3extensions/: gbmm.h  gbmm.tcc  hbmm.h  hbmm.tcc  level3extensions.h  level3extensions.tcc  sbmm.h  sbmm.tcc  tbmm.h  tbmm.tcc
lib/xtensor-blas/include/xflens/cxxblas/netlib/: Makefile  blas.tgz  cblas.tgz
lib/xtensor-blas/include/xflens/cxxblas/sparselevel2/: gecrsmv.h  gecrsmv.tcc  heccsmv.h  heccsmv.tcc  hecrsmv.h  hecrsmv.tcc  sparselevel2.h  sparselevel2.tcc  syccsmv.h  syccsmv.tcc  sycrsmv.h  sycrsmv.tcc  trccssv.h  trccssv.tcc  trcrssv.h  trcrssv.tcc
lib/xtensor-blas/include/xflens/cxxblas/sparselevel3/: gecrsmm.h  gecrsmm.tcc  heccsmm.h  heccsmm.tcc  hecrsmm.h  hecrsmm.tcc  sparselevel3.h  sparselevel3.tcc  syccsmm.h  syccsmm.tcc  sycrsmm.h  sycrsmm.tcc  trccssm.h  trccssm.tcc  trcrssm.h  trcrssm.tcc
lib/xtensor-blas/include/xflens/cxxblas/tinylevel1/: acxpby.h  acxpby.tcc  acxpy.h  acxpy.tcc  axpby.h  axpby.tcc  axpy.h  axpy.tcc  ccopy.h  ccopy.tcc  copy.h  copy.tcc  geaxpy.h  geaxpy.tcc  gecopy.h  gecopy.tcc  gerscal.h  gerscal.tcc  gescal.h  gescal.tcc  rscal.h  rscal.tcc  scal.h  scal.tcc  tinylevel1.h  tinylevel1.tcc
lib/xtensor-blas/include/xflens/cxxblas/tinylevel2/: gemv.h  gemv.tcc  tinylevel2.h  tinylevel2.tcc
lib/xtensor-blas/include/xflens/cxxlapack/: CMakeLists.txt  cxxlapack.cxx  cxxlapack.h  cxxlapack.tcc
lib/xtensor-blas/include/xflens/cxxlapack/interface/: bbcsd.h  bbcsd.tcc  bdsdc.h  bdsdc.tcc  bdsqr.h  bdsqr.tcc  cgesv.h  cgesv.tcc  chla_transtype.h  chla_transtype.tcc  cposv.h  cposv.tcc  disna.h  disna.tcc  dspcon.h  dspcon.tcc  gbbrd.h  gbbrd.tcc  gbcon.h  gbcon.tcc  gbequ.h  gbequ.tcc  gbequb.h  gbequb.tcc  gbrfs.h  gbrfs.tcc  gbsv.h  gbsv.tcc  gbsvx.h  gbsvx.tcc  gbtf2.h  gbtf2.tcc  gbtrf.h  gbtrf.tcc  gbtrs.h  (+1037 more)
lib/xtensor-blas/include/xtensor-blas/: xblas.hpp  xblas_config.hpp  xblas_config_cling.hpp.in  xblas_utils.hpp  xlapack.hpp  xlinalg.hpp
lib/xtensor-blas/test/: CMakeLists.txt  set_compiler_flag.cmake  test_blas.cpp  test_dot.cpp  test_dot_extended.cpp  test_lapack.cpp  test_linalg.cpp  test_lstsq.cpp  test_qr.cpp  test_tensordot.cpp
lib/xtensor-blas/test/test_generator/: preprocess.py
lib/xtensor-blas/test/test_generator/cppy_source/: test_dot_extended.cppy  test_lstsq.cppy  test_qr.cppy
(+17 files in other folders)
